Fix double view of name on mobile (?) add change_pic file

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,7 @@ body {
   font-weight: bold !important;
   text-align: center;
   margin-top: 75px;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
